src/app/page.module.css
.page {
  --gray-rgb: 0, 0, 0;
  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);

  --button-primary-hover: #383838;
  --button-secondary-hover: #f2f2f2;

  display: grid;
  grid-template-rows: 20px 1fr 20px;
  align-items: center;
  justify-items: center;
  min-height: 100svh;
  padding: 80px;
  gap: 64px;
  font-family: var(--font-geist-sans);
}

@media (prefers-color-scheme: dark) {
  .page {
    --gray-rgb: 255, 255, 255;
    --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
    --gray-alpha-100: rgba(var(--gray-rgb), 0.06);

    --button-primary-hover: #ccc;
    --button-secondary-hover: #1a1a1a;
  }
}

.main {
  display: flex;
  flex-direction: column;
  gap: 32px;
  grid-row-start: 2;
}

.main ol {
  font-family: var(--font-geist-mono);
  padding-left: 0;
  margin: 0;
  font-size: 14px;
  line-height: 24px;
  letter-spacing: -0.01em;
  list-style-position: inside;
}

.main li:not(:last-of-type) {
  margin-bottom: 8px;
}

.main code {
  font-family: inherit;
  background: var(--gray-alpha-100);
  padding: 2px 4px;
  border-radius: 4px;
  font-weight: 600;
}


.brain {
  width: 120vh;
  height: 55vh;
}

.gif {
  height: 00vh;
}

.linksContainer {
  display: flex;
  gap: 16px;
  justify-content: center;
  align-items: center;
  margin-top: -10vh;
  color: #93f400;
  margin: 4vh;
}

.links {
  padding: 10px 20px;
  text-decoration: none;
  border-radius: 8px;
  transition: background-color 0.3s ease;
  color: #93f400;
  margin-top: -1vh;
  margin: 2vh;
}

.linkComments {
  margin-top: 26.5vh;
  padding: 10px 20px;
  text-decoration: none;
  border-radius: 8px;
  transition: background-color 0.3s ease;
  color: #93f400;
}

.commentForm {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 20px;
  width: 100%;
  max-width: 500px;
  margin: 0 auto;
}


.name {
  margin: 3vh;
  color: #ffffff;
  position: relative;
}

.nameDiv {
  position: absolute;
}

.textarea {
  height: 10vh;
  padding: 10px;
  font-size: 14px;
  border-radius: 5px;
  border: 1px solid #ccc;
  margin-bottom: 10px;
}

.commentButton {
  padding: 10px 15px;
  background-color: #93f400;
  color: #000000;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-size: 14px;
}


.commentButton:hover {
  background-color: #ffa6fc;
}

.commentsSection {
  margin-top: 30px;
}

.comment {
  background-color: #000000;
  padding: 15px;
  border-radius: 5px;
  margin-bottom: 15px;
}

.commentText {
  font-size: 16px;
  margin-bottom: 5px;
  display: block;
}

.commentTimestamp {
  font-size: 12px;
  color: #ffffff;
  text-align: right;
}

.links:hover {
  background-color: var(--button-secondary-hover);
  color: #ffa6fc;
}

.commentBelow {
  margin-bottom: 50vh;
}

.mewwoBow {
  height: 40vh;
}

.spotifyEmbed {
  border: none;
  background-color: transparent;
  margin-top: -12vh;
}

.bubbles {
  width: 10vh;
  margin-top: 35vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}


.github {
  font-size: 3vh;
}

.github :hover {
  font-size: 3vh;
  color: #ffa6fc;
}

.umb {
  height: 40vh;
  width: 30vh;
  right: 20vh;
  position: absolute;
}

.code {
  color: #93f400;
  text-align: center;
  font-size: 1.5vh;
  margin-top: -30vh;
  position: relative;
  z-index: 0;
  margin-bottom: -20vh;
}

.clouds {
  height: 50vh;
  width: 30vh;
  position: absolute;
  left: 5vh;
  margin-top: -15vh;
}

.selfie {
  height: 60vh;
  width: 30vh;
  position: absolute;
  right: 50%;
  left: 42%
}

.about {
  color: #93f400;
  margin-top: 10vh;
  text-align: center;
  position: relative;
  padding: 50vh;
  margin-bottom: -50vh;
}

.slideshow {
  position: relative;
  width: 120%;
  height: 700px;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

.slide {
  opacity: 0;
  transition: opacity 1s ease-in-out;
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
}

.active {
  opacity: 1;
}

.image {
  height: auto;
}

.input {
  text-align: center;
}


.commForm {
  text-decoration: none;
  transition: background-color 0.3s ease;
  color: #ffffff;
  text-align: center;
}

.gloomy2 {
  position: relative;

}


.artText {
  text-decoration: none;
  transition: background-color 0.3s ease;
  color: #ffffff;
  text-align: center;
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.here {
  color: #ffa6fc;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  position: relative;
}

.player {
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 1;
  position: absolute;
}

.gif {
  margin-top: -50vh;
}

.flower {
  position: relative;
  margin-bottom: 15vh;
  top: 80%
}

@media (max-width: 1110px) {
  .page {
    padding: 32px;
    padding-bottom: 80px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
  }

  .music {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .spotifyEmbed {
    border: none;
    background-color: transparent;
    margin-top: 10vh;
  }

  .linksContainer {
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }

  .links {
    display: inline-block;
    text-decoration: none;
    transition: background-color 0.3s ease;
    color: greenyellow;
    margin: 2.5vh;
    flex-direction: column;
  }

  .links:hover {
    background-color: var(--button-secondary-hover);
  }

  .gif {
    margin-top: -3vh;

  }

  .bubbles {
    height: 10vh;
    padding-top: 15vh;
    margin-bottom: -20vh;
  }


  .code {
    color: #93f400;
    text-align: center;
    font-size: 2vh;
    margin-top: 1vh;
  }

  .umb {
    height: 38vh;
    width: 25vh;
    margin-top: 3vh;
    left: 1vh;
    position: relative;
  }

  .clouds {
    height: 50vh;
    width: 20vh;
    left: 1vh;
    position: relative;
    margin-top: 15vh;
  }


  .selfie {
    height: 60vh;
    width: 30vh;
    position: relative;
    left: 5%;
  }

  .about {
    margin-top: -30vh;
    font-size: 2vh;
  }

  .slideshow {
    position: relative;
    width: 100vh;
    height: 100vh;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
  }


  .gloomy2 {
    position: relative;
  }



  .slideshow {
    position: relative;
    width: 40vh;
    height: 40vh;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
  }

  .slideshow img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  .commForm {
    text-decoration: none;
    transition: background-color 0.3s ease;
    color: hsl(0, 0%, 100%);
    text-align: center;
    margin-top: -3vh;
  }


  .gif {
    margin-top: -30vh;
    margin-bottom: 10vh;
  }

  .mewwoBow {
    height: 50vh;
    width: 40vh;
  }


}

@media (prefers-color-scheme: dark) {
  .logo {
    filter: invert();
  }
}

@media (max-width: 2368px) {


  .umb {
    height: 40vh;
    width: 30vh;
    position: relative;
    left: 1%;
    right: 10vh;
    margin-top: 40vh;
    margin-right: 5vh;
    display: block;
  }

  .code {
    color: #93f400;
    text-align: center;
    font-size: 2vh;
    margin: 5vh auto;
    position: relative;
    padding-top: 40vh;
  }



  .clouds {
    position: relative;
    top: 90%;
    margin-right: 28vh;
    margin-top: 5vh;
  }

  .linksContainer {
    position: relative;
    display: inline;
    margin-top: 30vh;
  }
}

@media (max-width: 2500px) {

  .page {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
  }

  .selfie {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
    margin-right: 65vh;
  }

  .brain {
    width: 58vh;
    height: 40vh;
  }

  .umb {
    height: 40vh;
    width: 30vh;
    position: absolute;
  }

  .code {
    color: #93f400;
    font-size: 2vh;
    margin: 5vh 0;
    margin-top: -25vh;
  }

  .clouds {
    margin-top: 5vh;
    margin-bottom: 5vh;
  }

  .linksContainer {
    margin-top: -40vh;
    display: inline;
  }

  .about {
    color: #93f400;
    margin-top: 10vh;
    font-size: 3vh;
    text-align: center;
    position: relative;
    padding: 50vh;
    margin-bottom: -50vh;
  }


}

@media (max-width: 2500px) {

  .brain {
    width: 100vh;
  }

  .umb {
    position: relative;
    margin-top: -5vh;
    margin-bottom: -20vh;
  }

  .gloomy2 {
    padding-bottom: 2vh;
  }

  .selfie {
    left: 35%;
  }

  .about {
    margin-top: -40vh;
  }


  .clouds {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-left: 25vh;
  }

  .linksContainer {
    display: inline;
    margin-top: -8vh;
  }
}


@media (max-width: 1200px) {
  .linksContainer {
    display: inline-block;
    margin: 5vh;
  }

  .brain {
    width: 60vh;
  }
}

